2021-04-08  Chris Dumez  <cdumez@apple.com>

        OfflineAudioContext objects are leaking
        https://bugs.webkit.org/show_bug.cgi?id=224279

        Reviewed by Darin Adler.

        Add layout test coverage.

        * webaudio/OfflineAudioContext/offlineaudiocontext-leak-after-rendering-expected.txt: Added.
        * webaudio/OfflineAudioContext/offlineaudiocontext-leak-after-rendering.html: Added.
        * webaudio/OfflineAudioContext/offlineaudiocontext-leak-expected.txt: Added.
        * webaudio/OfflineAudioContext/offlineaudiocontext-leak.html: Added.

2021-04-08  Andres Gonzalez  <andresg_22@apple.com>

        VoiceOver does not echo text insertions and deletions when a contenteditable div has a non editable descendant element with a content editable child
        https://bugs.webkit.org/show_bug.cgi?id=223818

        Reviewed by Chris Fleizach.

        * accessibility/nested-textareas-value-changed-notifications-expected.txt: Added.
        * accessibility/nested-textareas-value-changed-notifications.html: Added.

2021-04-08  Sihui Liu  <sihui_liu@apple.com>

        Remove logging for investigating http/tests/IndexedDB/storage-limit-1.html failure
        https://bugs.webkit.org/show_bug.cgi?id=223086
        <rdar://problem/75591816>

        Reviewed by Chris Dumez.

        * http/tests/IndexedDB/storage-limit-1.https.html:
        * http/tests/IndexedDB/storage-limit-2.https.html:
        * http/tests/IndexedDB/storage-limit.https.html:

2021-04-08  Antti Koivisto  <antti@apple.com>

        Revert r273621 because iPhone PLT regression
        https://bugs.webkit.org/show_bug.cgi?id=224323

        Unreviewed.

        * fast/text/splitText-dirty-lines-expected.txt:
        * fast/text/text-combine-surroundContents-crash-expected.txt:
        * imported/blink/fast/css/first-letter-range-insert-expected.txt:

2021-04-08  Youenn Fablet  <youenn@apple.com>

        Update SFrame implementation to latest version