@@ -1,3 +1,14 @@
+2021-04-08  Chris Gambrell  <cgambrell@apple.com>
+
+        [LayoutTests] Convert http/tests/workers convert PHP to Python
+        https://bugs.webkit.org/show_bug.cgi?id=223522
+        <rdar://problem/75624689>
+
+        Reviewed by Jonathan Bedard.
+
+        * http/tests/workers/resources/worker-encoded.py:
+        * http/tests/workers/resources/xhr-response.php: Removed.
+
 2021-04-08  Chris Dumez  <cdumez@apple.com>
 
         OfflineAudioContext objects are leaking
